Fix result line shifting down

--- a/src/app/tax-game/tax-game.component.less
+++ b/src/app/tax-game/tax-game.component.less
@@ -12,7 +12,6 @@
     margin: 0px 10px;
     padding-bottom: 20px;
 
-
     border-radius: 25px;
     border-style: solid;
     border-color: #ff5a5f;
@@ -69,7 +68,7 @@
 .tax-result {
   text-align: center;
   margin: 20px;
-  padding: 20px;
+  padding: 15px;
   display: inline-block;
   width: 50%;
   font-size: 15px;
@@ -80,7 +79,7 @@
 
   p {
     display: inline-block;
-    margin: 0 10%;
+    margin: 0 7%;
   }
 
   .res-value {
